@@ -1,3 +1,10 @@
+iRedMail-0.9.5:
+    * Fixed issues:
+        - Not correctly add Postfix alias 'virusalert: root' for
+          non-(Debian/Ubuntu) OSes.
+        - Not create directory used to store php session files.
+        - Not enable cron job to auto update SpamAssassin rules on RHEL/CentOS.
+
 iRedMail-0.9.4:
     * New scripts:
         - tools/fail2ban_unban_ip.sh. Used to unban specified IP addresses
